register får sin egen mur
